--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^4.5.7",
     "morgan": "^1.7.0",
     "nodemon": "^1.18.10",
+    "openzeppelin-solidity": "^2.1.1",
     "path": "^0.12.7",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
